--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.3.5",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.0",
     "validator": "^13.12.0"
   }
